asfdec: Skip to keyframe after seeking

Fixes Ticket1616

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>