libavformat/asf.h
@@ -42,6 +42,7 @@ typedef struct ASFStream {
     int packet_obj_size;
     int timestamp;
     int64_t duration;
+    int skip_to_key;
 
     int ds_span;                /* descrambling  */
     int ds_packet_size;
